# RiSKYiNVESTOR

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  compose.local.yml  compose.traefik.yml  compose.yml  compose.yml.bak_2026-06-18_162909  compose.yml.bak_2026-06-19_161328  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.server.json  vite.config.ts
deploy/traefik/: compose.yml
docs/: multi_strategy_v1.md
examples/: daily-portfolio-snapshot.example.json  signal-event.example.json
scanner/: .dockerignore  Dockerfile  pyproject.toml
scanner/src/risky_investor_scanner/: __init__.py  __main__.py  calculations.py  config.py  engine.py  market_data.py  storage.py
scanner/tests/: test_market_data_provider.py  test_scanner.py
scripts/: hash-password.ts
server/: auth.ts  dashboardAppearance.ts  dataStatus.ts  discordDestinations.ts  discordEmbeds.ts  index.ts  multiStrategy.ts  notifications.ts  runtimeData.ts  scannerImport.ts  signalEvents.ts  store.ts  strategyConfig.ts
src/: App.tsx  appearance.css  appearance.ts  dashboardCommandCentre.css  discordDestinations.css  index.css  main.tsx  strategyConfiguration.css  strategyMonitor.css  strategyPolicies.css  tradeJournalSignalActions.css  types.ts
tests/: appearance.test.mjs  dashboard-command-centre-ui.test.tsx  data-cleanup.test.mjs  multi-strategy.test.mjs  notifications.test.mjs  server.integration.test.mjs  signal-events.test.mjs  signal-monitor-ui.test.tsx  startup.test.mjs  store.test.mjs  strategy-performance-page.test.tsx  trade-journal-ui.test.tsx
(+49 files in other folders)
