[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risky-investor-scanner"
version = "1.0.0"
description = "Self-contained strategy scanner and virtual model monitor for RiSKYiNVESTOR"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.3,<9"]

[tool.hatch.build.targets.wheel]
packages = ["src/risky_investor_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
